[metadata]
name = Sberbank2Excel
version = 4.11.0
author = Ev2geny
author_email = ev2geny@gmail.com
description = конвертация выписки сбербанка по карте из формата PDF в формат Excel
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ev2geny/Sberbank2Excel
project_urls =
    Bug Tracker = https://github.com/Ev2geny/Sberbank2Excel/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
            =src
packages = find:
python_requires = >=3.12
install_requires = 
    pdfminer.six
    pandas
    Unidecode
    XlsxWriter
    pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sberbankPDF2Excel = Sberbank2Excel.sberbankPDF2Excel:main
    sberbankPDF2ExcelGUI = Sberbank2Excel.sberbankPDF2ExcelGUI:main
